# HW_13.2_Web

./: README.md  pyproject.toml
quotes/: Mongo_to_postgr.py  config.py
quotes/auth_app/: urls.py  views.py
quotes/auth_app/templates/auth_app/: login.html  logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  register.html
quotes/quotes/: .env.example  settings.py  urls.py
quotes/quotesapp/: forms.py  models.py  urls.py  views.py
quotes/quotesapp/migrations/: 0001_initial.py
quotes/quotesapp/templates/quotesapp/: add_author.html  add_quote.html  author.html  base.html  quotes.html
